@@ -5,7 +5,7 @@ DIST QuakePack.zip 16447 RMD160 534369eacf4f85f9920d14dc7bdc46b3794e53db SHA1 e1
 DIST TremulousPack.zip 17153 RMD160 c51a6be8bf0a0de5fd084984375361f6c1b022ca SHA1 45508c0fa02c417943dd365cfc4dc799bc96ca3a SHA256 25737d258af7d9dd47cbf8942948e8e1322a6404a643c875911d6a39120567ce
 DIST WarsowPack.zip 17855 RMD160 ba49f62486bb67732071e538b0719335bb0625f4 SHA1 5b64e97ed78e5b3e5679710d382bce804214518c SHA256 756a99c76e486ea3f5d2c45addf8afed504a2faf3087cdd210b420af259c2653
 DIST netradiant-1.5.0_p20110127.tar.xz 2066856 RMD160 cf4f28a08a89052882920a9aecc3c25f3426ce5f SHA1 c07f7168700994a88a8fac3c1b8ab9be2f24e75d SHA256 a3607f0beb66b4ff2d7451ad5e9849d0fd85ab0274931bc12c5fbe1c480e3ee7
-EBUILD netradiant-1.5.0_p20110127.ebuild 4216 RMD160 40341f2bb5e11b2454ec42b2cf4fa509e5fbd77d SHA1 fb8522db4cedb7cc0efeac7e09226a45879ab1ac SHA256 c8f53bc11b66c81d3051cb2c15b0096c50d99030663f3832499af862fdab9046
-EBUILD netradiant-9999.ebuild 6625 RMD160 b213efd39d38ad1f147cbb5c014e818cbae52f1f SHA1 dd677e0a874bc3c92d4aa4eb32b43a043e88b7c5 SHA256 cf0b00dc365e3c644316079fec6b157714bc104abdde82842b82661f47c4f42f
-MISC ChangeLog 662 RMD160 a4ec79b0f57bae2c38a86957c87a1439bc195f82 SHA1 a632c2535d3060e71063641822b8adebaa0781ed SHA256 4becf534ec619bcb84b769561e813786a21a02f86adbda6d98a75846b875a6be
+EBUILD netradiant-1.5.0_p20110127.ebuild 4118 RMD160 edac22f14eb1bef8d8f4b30e3bd1b89b2f01c628 SHA1 c8b8e11503dbba31ee05fb95ce71df1c2067ea63 SHA256 ae7a16aa98368f597de0693f1b42999afd44491c6c5e29de6d04ce1cb306e54f
+EBUILD netradiant-9999.ebuild 6592 RMD160 0eb1a484200b5ac6b778bbc3dd9e3d6e8cda6bb5 SHA1 985c40eecabafa0a15741b8f7e54f81a2e13e652 SHA256 737bcee430e7db3b53e1925e56d289dbe2a06dc40abb1fadad55a574034d1e35
+MISC ChangeLog 796 RMD160 4d9bce0f9c8f475b0772a1f5da27b3798e12df3a SHA1 83a9e6af07ef2a992489f4c7a7c1ff2fc7e2c702 SHA256 50b402300aa20ada4c26f76081eeec490fe86dfc3deb356e69ad326dec6ef908
 MISC metadata.xml 1186 RMD160 be062c22d9a05efbffacba53c88f2ed64b3bfc82 SHA1 dcf36e19740d7918e273cb6b4ab284311e0e6308 SHA256 fdd751ec9cc622879d9a46f66f3a90c390177ddf4b421768abdce5e82688db5f
